[package]
name = "errsponse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
errsponse-derive = { version = "0.1.0", path = "../errsponse-derive" }
http = "0.2.9"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
